fix(app): responsive sidebar & layout shift caused by border

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -3,6 +3,9 @@
     flex-direction: row;
     background: var(--color-bg-1);
     justify-content: space-between;
+    position: fixed;
+    z-index: 2;
+    width: 100%;
     padding: 16px 80px;
 }
 
@@ -84,12 +87,12 @@
     display: flex;
     flex-direction: column;
     align-items: start;
-    
-    position: absolute;
-    right: 24px;
+    position: fixed;
+    z-index: 2;
+    right: 0;
     top: 40px;
     background: #030712;
-    
+    padding: 12px;
     margin-top: 1rem;
     min-width: 320px;
     height: 100%;
@@ -103,7 +106,6 @@
     border: 0;
     height: 36px;
     width: 100%;
-    margin: 16px;
     background: #F9FAFB;
 }
 
@@ -115,7 +117,6 @@
     border: 0;
     height: 36px;
     width: 100%;
-    margin: 16px;
     background: #f9fafbdd;
     cursor: pointer;
 }
@@ -160,22 +161,22 @@
     height: 24px;
     transition: transform 0.5s ease, opacity 0.5s ease;
   }
-  
+
 .navbar-right-content .sun-icon {
     transform: rotate(0deg);
     opacity: 1;
   }
-  
+
 .navbar-right-content .moon-icon {
     transform: rotate(180deg);
     opacity: 0;
   }
-  
+
 .navbar-right-content .theme-toggle-button .show {
     opacity: 1;
     transform: rotate(0deg);
   }
-  
+
 .navbar-right-content .theme-toggle-button .hide {
     opacity: 0;
     transform: rotate(180deg);
