--- a/src/components/technology/technology.css
+++ b/src/components/technology/technology.css
@@ -7,14 +7,13 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s;
+    padding: 8px;
   }
-  
+
   .__bmdev-technology:hover {
-    transform: scale(1.05);
-    border: 1px solid #D1D5DB;
-    border-radius: 8px;
+    transform: scale(1.1);
   }
-  
+
   .technology-image {
     width: 64px;
     height: 64px;
@@ -22,7 +21,7 @@
     margin-bottom: 8px;
     object-fit: contain;
   }
-  
+
   .technology-name {
     font-size: 18px;
     font-weight: normal;
@@ -30,4 +29,3 @@
     line-height: 28px;
     color: var(--color-text-2);
   }
-  
