--- a/src/conatiners/hero/hero.css
+++ b/src/conatiners/hero/hero.css
@@ -74,7 +74,6 @@
 }
 
 .bmdev__hero-image {
-    padding-left: 80px;
 }
 
 .bmdev__hero-content-links {
